# DarnitsaCashBot

./: .buildpacks  .env.tmp  .gitignore  .slugignore  2.0.32  APPLY_MIGRATION.md  Aptfile  INSTALL.md  Makefile  Procfile  README.md  alembic.ini  debug_scraper.py  detect_qr.py  docker-compose.yml  easy.md  env.example  find_api.py  get_receipt_items.py  install-cpu.bat  install-cpu.sh  mypy.ini  prd.md  pyproject.toml  pytest.ini  qr_detect_now.py  qr_result.txt  quick_qr_test.py  requirements-cpu.txt  requirements-dev.txt  requirements.txt  ruff.toml  run_qr_test.bat  runtime-es2015.js  scraper_output.txt  show_qr_result.py  temp_check.html  test_full_receipt.py  test_qr_direct.py  test_qr_simple.py  (+2 more)
.cursor/rules/: rules.mdc
alembic/: env.py  script.py.mako
alembic/versions/: 20251201_00_initial_schema.py  20251201_01_portmone_bonus_fields.py  20251202_00_fix_price_fields_bigint.py  20251202_01_remove_portmone_fields.py
apps/admin_api/: __init__.py  main.py
apps/api_gateway/: __init__.py  background.py  dependencies.py  exception_handlers.py  exceptions.py  main.py  schemas.py  security.py
apps/api_gateway/routes/: __init__.py  admin.py  bot.py  portmone.py
apps/api_gateway/services/: telegram_notifier.py
apps/telegram_bot/: __init__.py  config.py  main.py
apps/telegram_bot/handlers/: __init__.py  commands.py  media.py
apps/telegram_bot/middlewares/: __init__.py  dependency.py
apps/telegram_bot/services/: __init__.py  receipt_client.py
docs/: API_RESPONSE_TO_USER.md  DATABASE_MIGRATION_GUIDE.md  OCR.md  SELENIUM_RUNBOOK.md  cloudflare_r2_setup.md  easy.md  heroku_database_inspection.md  heroku_deployment.md  heroku_quick_check.md  heroku_troubleshooting.md  portmone_auth.md  portmone_phone_topup.md  portmone_quickstart.md  portmone_setup.md  prd.md  r2_quick_setup.sh  setup_postgresql.md  storage_alternatives.md  telegram_flow.md
libs/common/: __init__.py  analytics.py  config.py  constants.py  crypto.py  darnitsa.py  events.py  i18n.py  logging.py  messaging.py  notifications.py  portmone.py  rate_limit.py  scheduler.py  security.py  storage.py  xml_utils.py
libs/data/: __init__.py  database.py  repositories.py
libs/data/models/: __init__.py  (+5 more)
scripts/: API_RESPONSE_CHECK_REPORT.md  check_and_migrate_db.js  check_darnitsa_simple.py  check_database.py  check_env_quotes.py  check_portmone_api.py  check_tesseract_setup.py  connect_db_direct.py  debug_qr_detection.py  delete_all_data.js  delete_all_data.py  delete_all_data.sql  delete_all_data_heroku.js  download_heroku_env.py  download_heroku_env_api.py  get_updates.py  inspect_database.py  ocr_result.json  recognize_check.py  run_greeting_test.py  run_migrations.py  run_qr_test.bat  set_heroku_config.py  set_tax_token.md  show_users_table.py  temp_delete_all.sql  test_api_response_structure.py  test_bot_connection.py  test_darnitsa_prefix.py  test_env.py  test_greeting_logic.py  test_heroku_ocr.py  test_ocr_minimal.py  test_ocr_simple.py  test_parse_page.py  test_phone_topup.py  test_portmone_api.py  test_qr_detection.py  test_qr_direct.py  test_qr_scraping.py  (+11 more)
scripts/test_results/: example_user_message.txt  parse_result_20251203_113637.json  tax_api_error_20251203_104746.json
services/bonus_service/: __init__.py  main.py
services/easypay_mock/: Dockerfile  main.py
services/ocr_mock/: Dockerfile  main.py
services/ocr_worker/: Dockerfile  __init__.py  postprocess.py  preprocess.py  qr_scanner.py  receipt_scraper.py  tesseract_runner.py  worker.py
services/portmone_mock/: Dockerfile  main.py
services/rules_engine/: __init__.py  service.py
tests/: conftest.py  test_bonus_worker.py  test_crypto.py  test_greeting_simple.py  test_portmone_client.py  test_portmone_webhook.py  test_rate_limit.py  test_receipt_file_processing.py  test_rules_matcher.py  test_security.py  test_telegram_bot_greeting.py
tests/api_gateway/: __init__.py  test_darnitsa_filter.py
tests/libs/: __init__.py  test_darnitsa.py
tests/services/: test_postprocess.py  test_preprocess.py
(+18 files in other folders)
