[tool.poetry]
name = "darnitsacashbot"
version = "0.1.0"
description = "End-to-end automation platform for DarnitsaCashBot campaign."
authors = ["Darnitsa Automation <eng@darnitsa.ua>"]
readme = "README.md"
packages = [
  { include = "apps", from = "." },
  { include = "libs", from = "." },
  { include = "services", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
aiogram = "^3.5.0"
aioboto3 = "^13.0.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.5.0"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
httpx = "^0.27.0"
redis = "^5.0.4"
python-multipart = "^0.0.9"
tenacity = "^9.0.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
prometheus-client = "^0.20.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"
cryptography = "^43.0.0"
pendulum = "^3.0.0"
numpy = "^2.1.0"
opencv-python-headless = "^4.10.0.84"
Pillow = "^10.4.0"
pytesseract = "^0.3.10"
python-Levenshtein = "^0.25.1"
Unidecode = "^1.3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
ruff = "^0.5.0"
mypy = "^1.11.0"
types-redis = "^4.6.0"
types-pytz = "^2024.1"
fakeredis = "^2.23.0"
aiosqlite = "^0.20.0"

[tool.poetry.scripts]
telegram-bot = "apps.telegram_bot.main:run"
api-gateway = "apps.api_gateway.main:run"
bonus-service = "services.bonus_service.main:run_worker"
ocr-worker = "services.ocr_worker.worker:run_worker"
rules-engine = "services.rules_engine.service:run_worker"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
extend-select = ["I"]
target-version = "py311"

[tool.ruff.lint.isort]
known-first-party = ["apps", "libs", "services"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra -q --maxfail=1 --cov=."

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
ignore_missing_imports = true

